new role button class + full profile activity gap

--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -142,7 +142,7 @@
       }
 
       // Roles
-      .role_e4010c {
+      .role_f9575e {
         position: relative;
         overflow: hidden;
         border: none;
