--- a/stuff/_settings.scss
+++ b/stuff/_settings.scss
@@ -329,7 +329,7 @@
       z-index: 1;
       border-radius: 0;
 
-      .role_e4010c {
+      .role_f9575e {
         border-radius: 5px;
         margin-bottom: 6px;
         padding-left: 20px;
