follow betterdiscord meta system

--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -2,6 +2,8 @@
 * @name Comfy Fork
 * @author Nyria#3863, metro420yt
 * @description Stay comfy while talking to your friends
+* @version 2.4.2
+* @website https://github.com/Metro420yt/Discord-comfy
 */
 
 @import "https://raw.githubusercontent.com/Metro420yt/Discord-comfy/master/betterdiscord/main.css";
