map color vars to color palette +misc

--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -331,6 +331,11 @@
     }
   }
 
+  //full profile tabs
+  .tabBar_ecc04c {
+    margin-bottom: 4px;
+  }
+
   .accountBtnInner_ec99f9[aria-label="Battle.net"],
   .accountButtonInner_e2a436[aria-label="Battle.net"],
   .accountButtonInner_e2a436[aria-label="Battle.net"]:hover,
