--- a/stuff/_other.scss
+++ b/stuff/_other.scss
@@ -620,4 +620,13 @@
 
 .theme-dark {
   --card-secondary-bg: var(--background-secondary);
+
+  --theme-base-color: var(--background-tertiary);
+  --theme-base-color-amount: 100%;
+
+  --bg-base-primary: var(--background-primary);
+  --bg-base-secondary: var(--background-secondary);
+  --bg-base-tertiary: var(--background-tertiary);
+
+  --bg-surface-raised: var(--background-tertiary);
 }
