re-organize profile +msg actions background +username background (readablity) +misc

--- a/app.scss
+++ b/app.scss
@@ -1,4 +1,5 @@
 @forward "stuff/chat";
+@forward "stuff/profile";
 @forward "stuff/server-list";
 @forward "stuff/channel-list";
 @forward "stuff/channel-bar";
