--- a/stuff/_chat.scss
+++ b/stuff/_chat.scss
@@ -278,6 +278,10 @@
   .icon_f9af59 {
     color: var(--chat-buttons);
   }
+  //msg actions
+  .buttonsInner_d5deea {
+    background-color: var(--background-secondary-alt);
+  }
 
   // Apps
   .contentWrapper_f7506e {
