--- a/stuff/_activity.scss
+++ b/stuff/_activity.scss
@@ -18,16 +18,19 @@
     .details_c1d9fd,
     .name_c1d9fd,
     .nameNormal_c1d9fd,
-    .nameWrap_c1d9fd {
-      color: var(--header-primary);
+    .nameWrap_c1d9fd,
+    [style^="color: var(--text-"] {
+      color: var(--header-primary) !important;
+    }
+
+    .contextMenu_ae1fa2 > svg > path, //3 dots
+    .badgeContainer_d60c6d:not(:has(.timestamp_c5d1c1)) > svg > path {
+      //icons other than time played (hopefully)
+      fill: var(--header-primary);
     }
 
     .platformIcon_ae1fa2 {
       background-color: var(--header-primary);
-    }
-
-    .contextMenu_ae1fa2 > svg > path {
-      fill: var(--header-primary);
     }
 
     .button_dd4f85 {
@@ -48,7 +51,7 @@
     }
 
     // Waves are back :D
-    .headerTextNormal_c1d9fd::before {
+    .header_ae1fa2::before {
       content: "";
       position: absolute;
       height: 25px;
@@ -73,30 +76,29 @@
       }
     }
 
-    // Playing
-    &::before {
+    // Wave
+    &::before,
+    &::after {
       content: "";
       position: absolute;
       width: 100%;
-      height: 100%;
-      z-index: -2;
       left: 0;
-      top: 0;
+
       background: #7289da;
       background: var(--playing);
+    }
+
+    &::before {
+      height: 100%;
+      z-index: -2;
+      top: 0;
       border-radius: 0 0 10px 10px;
     }
 
     &::after {
-      content: "";
-      position: absolute;
       height: 25px;
       z-index: 2;
-      width: 100%;
       top: -24px;
-      left: 0;
-      background: #7289da;
-      background: var(--playing);
       -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="284" height="25" viewBox="0 0 284 25"><path d="M283.999 15.2776C228.798 15.2776 211.243 -0.0317305 140.048 -0.000164877C69.0475 -0.000164877 51.2975 15.2776 8.58307e-06 15.2776V24.9998H284C284 24.9998 283.999 18.9392 283.999 15.2776Z"/></svg>');
       animation: animate 6s linear infinite;
       animation-delay: 0s;
@@ -113,64 +115,39 @@
     }
 
     // Spotify
-    .bar_b5cd55 {
+    &:has(.bar_b5cd55) {
       &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        left: 0;
-        top: 0;
         background: #1db954;
         background: var(--listening);
-        border-radius: 0 0 10px 10px;
       }
-
       &::after {
-        content: "";
-        position: absolute;
-        height: 25px;
-        width: 100%;
-        top: -24px;
-        left: 0;
-        z-index: 3;
         background: #1db653;
         background: var(--listening);
-        -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="284" height="25" viewBox="0 0 284 25"><path d="M283.999 15.2776C228.798 15.2776 211.243 -0.0317305 140.048 -0.000164877C69.0475 -0.000164877 51.2975 15.2776 8.58307e-06 15.2776V24.9998H284C284 24.9998 283.999 18.9392 283.999 15.2776Z"/></svg>');
-        animation: animate 6s linear infinite;
-        animation-delay: 0s;
       }
     }
 
     //twitch
     &:has([src*="/previews-ttv/"]) {
-      &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        left: 0;
-        top: 0;
-        background: #6441a5;
-        background: var(--streaming);
-        border-radius: 0 0 10px 10px;
-      }
-
+      &::before,
       &::after {
-        content: "";
-        position: absolute;
-        height: 25px;
-        width: 100%;
-        top: -24px;
-        left: 0;
-        z-index: 3;
         background: #6441a5;
         background: var(--streaming);
-        -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="284" height="25" viewBox="0 0 284 25"><path d="M283.999 15.2776C228.798 15.2776 211.243 -0.0317305 140.048 -0.000164877C69.0475 -0.000164877 51.2975 15.2776 8.58307e-06 15.2776V24.9998H284C284 24.9998 283.999 18.9392 283.999 15.2776Z"/></svg>');
-        animation: animate 6s linear infinite;
-        animation-delay: 0s;
+      }
+    }
+
+    //playstation
+    &:has(.platformIcon_ae1fa2[style*="/assets/8fca7fcefaac64787658.svg"]) {
+      &::before,
+      &::after {
+        background: #0070d1;
+      }
+    }
+
+    //crunchyroll
+    &:has(.platformIcon_ae1fa2[style*="/assets/24ff5d6c720b110d2792.svg"]) {
+      &::before,
+      &::after {
+        background: #f37521;
       }
     }
   }
