[urgent] class name update

--- a/stuff/_friends.scss
+++ b/stuff/_friends.scss
@@ -62,7 +62,7 @@
   }
 
   // full User profile (modal)
-  .userProfileOuter_c69a7b {
+  .outer_c69a7b.fullSize_c69a7b {
     // Banner
     .bannerSVGWrapper_b32cc2 {
       overflow: visible;
