move connections to seperate file

--- a/app.scss
+++ b/app.scss
@@ -1,5 +1,6 @@
 @forward "stuff/chat";
 @forward "stuff/profile";
+@forward "stuff/connections";
 @forward "stuff/server-list";
 @forward "stuff/channel-list";
 @forward "stuff/channel-bar";
