--- a/stuff/_profile.scss
+++ b/stuff/_profile.scss
@@ -22,26 +22,38 @@
     }
 
     //status parent
-    .header_b8cc6d > :has(.statusBubbleOuter_af9888) {
-      height: 0;
-    }
+    .header_b8cc6d {
+      min-height: 130px !important;
 
-    // status
-    .statusBubbleOuter_af9888 {
-      top: -24px;
+      // status
+      [role="tooltip"] {
+        position: fixed;
 
-      &::before {
-        top: -8px !important;
-        left: 4px !important;
-      }
-      &::after {
-        top: -16px !important;
-        left: -8px !important;
-      }
+        // only has emoji
+        .statusEmoji_c8ce83:not(:has(+ .statusText_c8ce83)) {
+          $size: 24px;
+          min-width: $size;
+          min-height: $size;
+          max-width: $size;
+          max-height: $size;
+        }
 
-      .statusBubble_a82ccc {
-        background-color: var(--background-tertiary);
-        top: -24px;
+        .outer_c8ce83 {
+          top: -20px;
+
+          .inner_c8ce83 {
+            background-color: var(--background-tertiary);
+          }
+
+          &::before {
+            top: -8px !important;
+            left: 4px !important;
+          }
+          &::after {
+            top: -16px !important;
+            left: -8px !important;
+          }
+        }
       }
     }
   }
