--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -1,8 +1,17 @@
 :root {
+  --button-count: 3;
+  //height*count + bottom padding
+  --buttons-height: calc((34.5px * var(--button-count)) + 10px);
+
+  &:has(.container_b2ca13 > .flex_dc333f > *:nth-child(4)) {
+    --button-count: 4;
+  }
+
   // Server list
   .guilds_a4d4d9 .scroller_fea3ef {
     contain: none !important;
-    padding-bottom: 170px;
+    height: calc(100vh - var(--buttons-height));
+    padding-bottom: 40px;
   }
 
   // Folder
@@ -21,6 +30,10 @@
       padding: 8px;
       border-radius: 0;
     }
+  }
+
+  .footer_d71945 {
+    display: none; // hides discover button
   }
 
   .pageWrapper_a3a4ce {
@@ -183,6 +196,8 @@
     width: 100%;
     height: 15px;
     padding: 0;
+
+    bottom: var(--buttons-height);
 
     .unreadMentionsBar_fea3ef {
       border-radius: 0;
