--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -105,9 +105,6 @@
     .footer__49fc1 {
       box-shadow: none;
     }
-    .lookFilled__201d5.colorPrimary__201d5 {
-      background-color: var(--brand-experiment);
-    }
     .contents__201d5 {
       color: #fff;
     }
@@ -220,7 +217,7 @@
     top: 0;
     left: 0;
 
-    .numberBadge__40d6f {
+    .numberBadge__2b1f5 {
       background-color: var(--mention-color) !important;
 
       &::before {
