--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -149,7 +149,7 @@
           var(--background-tertiary) 15%
         );
 
-        & > .button__67645 {
+        & .button__67645 {
           color: var(--user-buttons-color);
           margin: var(--user-buttons-spacing) auto 0 auto;
           width: 100%;
