button & pfp fix

--- a/stuff/_chat.scss
+++ b/stuff/_chat.scss
@@ -5,7 +5,7 @@
   }
 
   // Avatar of the user
-  .panels_c48ade > .container__37e49 > .avatarWrapper__37e49 {
+  .panels_c48ade > .container__37e49 .avatarWrapper__37e49 {
     position: fixed;
     bottom: 26.5px;
     left: 327.5px;
