--- a/stuff/_plugins_support.scss
+++ b/stuff/_plugins_support.scss
@@ -43,14 +43,14 @@
     + .base_c48ade
     .panels_c48ade
     > .container__37e49
-    > .avatarWrapper__37e49 {
+    .avatarWrapper__37e49 {
     transition: margin-left 300ms linear;
   }
   .guilds_c48ade.content-Pph8t6:not(.closed-j55_T-)
     + .base_c48ade
     .panels_c48ade
     > .container__37e49
-    > .avatarWrapper__37e49 {
+    .avatarWrapper__37e49 {
     margin-left: 72px;
   }
 
@@ -59,7 +59,7 @@
     + .base_c48ade
     .panels_c48ade
     > .container__37e49
-    > .avatarWrapper__37e49 {
+    .avatarWrapper__37e49 {
     transition: margin-left 300ms linear;
     margin-left: 72px;
   }
