--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -137,7 +137,7 @@
       container-type: unset;
       height: 0;
 
-      & .flex__7c0ba {
+      & .buttons__37e49 {
         position: fixed;
         bottom: 0;
         left: 0;
