--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -3,6 +3,7 @@
 * @author Nyria#3863, metro420yt
 * @description Stay comfy while talking to your friends
 * @version 2.4.2
+* @invite rtBQX5D3bD
 * @website https://github.com/Metro420yt/Discord-comfy
 */
 
