--- a/app.scss
+++ b/app.scss
@@ -15,3 +15,8 @@
 :root {
   --visRefresh-text: "[Comfy] New UI Unsupported";
 }
+
+//threads patch
+.threadSidebarOpen_f75fb0 {
+  padding-right: 240px;
+}
