add username tint to all locations closes #2

--- a/stuff/_profile.scss
+++ b/stuff/_profile.scss
@@ -56,4 +56,12 @@
       }
     }
   }
+
+  .container__63ed3 {
+    background-color: #0000003f;
+    border-radius: 8px;
+    padding: 2px;
+    width: fit-content;
+    z-index: 1;
+  }
 }
