fixed pfp beside chatbar - account profile popout matches other profile areas - fixed bottom unread mentions indicator - misc

--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -76,7 +76,8 @@
     }
 
     // Body
-    .body__5be3e {
+    .body__5be3e,
+    .body_af7fb7 {
       position: static;
       overflow: visible;
 
@@ -206,7 +207,6 @@
     }
 
     .headerInner__24502 {
-      width: calc(100% - 8px);
       box-sizing: border-box;
       z-index: 1;
     }
