--- a/stuff/_chat.scss
+++ b/stuff/_chat.scss
@@ -45,6 +45,7 @@
   }
 
   // Hiding avatar
+  .content_c48ade > .container__133bf,
   .callContainer__722ff,
   .gatedContent__7184c,
   .chat_f75fb0
