--- a/src/connections.scss
+++ b/src/connections.scss
@@ -28,10 +28,11 @@ $connections: (
 
 :root {
   @each $conn, $color in $connections {
-    .connectionIcon_c7f964[alt="#{$conn}"],
-    .accountBtnInner__750de[aria-label="#{$conn}"],
-    .accountButtonInner_c7f964[aria-label="#{$conn}"],
-    .connectedAccountIcon_e6abe8[aria-label="#{$conn}"] {
+    .connectionIcon_c7f964[alt="#{$conn}"], // connections page
+    .accountBtnInner__750de[aria-label="#{$conn}"], // add (all shown)
+    .accountButtonInner_c7f964[aria-label="#{$conn}"], // add (featured)
+    .connectedAccountIcon_e6abe8[aria-label="#{$conn}"] // profile modal
+    {
       background-color: $color;
     }
   }
