more avatar classes + misc

--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -1,13 +1,10 @@
 :root {
+  // main list
   .container__2637a {
     background-color: var(--background-secondary);
   }
 
-  .privateChannels__35e86,
-  .sidebar_c48ade {
-    overflow: visible;
-  }
-
+  //weird bar
   .sidebar_c48ade::after {
     all: unset;
   }
