--- a/src/member-list.scss
+++ b/src/member-list.scss
@@ -1,7 +1,9 @@
-.members_c8ffbb {
-  background-color: var(--background-secondary);
-
-  .member__5d473:not(.wrapperPlated__91a9d) {
+:root {
+  .members_c8ffbb {
     background-color: var(--background-secondary);
+
+    .member__5d473:not(.wrapperPlated__91a9d) {
+      background-color: var(--background-secondary);
+    }
   }
 }
