--- a/src/profile.scss
+++ b/src/profile.scss
@@ -1,8 +1,8 @@
-@use "chat.scss" as chat;
-
 :root {
   .avatar__44b0c,
-  .avatar_c19a55 {
+  .avatar_c19a55,
+  .avatar__07f91,
+  .avatarSpeaking__44b0c {
     border-radius: var(--avatar-radius);
   }
 
