--- a/app.scss
+++ b/app.scss
@@ -2,6 +2,7 @@
 @forward "src/channel-list.scss";
 @forward "src/chat.scss";
 @forward "src/connections.scss";
+@forward "src/friends.scss";
 @forward "src/member-list.scss";
 @forward "src/profile.scss";
 @forward "src/server-list.scss";
