fourm colors +misc

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,6 @@
 .theme-darker,
 .theme-dark,
+.visual-refresh .theme-darker,
 .visual-refresh.theme-darker,
 .visual-refresh.theme-dark {
   --background-primary: #23283d;
