revert from faf2270162273e705f50b57c06e4fcba9d9850c9

--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -4,6 +4,11 @@
     background-color: var(--background-secondary);
   }
 
+  .privateChannels__35e86,
+  .sidebar_c48ade {
+    overflow: visible; // show pfp
+  }
+
   //weird bar
   .sidebar_c48ade::after {
     all: unset;
