--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -33,4 +33,9 @@
       }
     }
   }
+
+  //announcement channel "follow this channel"
+  .wrapper__44df5 {
+    background-color: var(--background-secondary);
+  }
 }
