--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -4,9 +4,9 @@
     background-color: var(--background-secondary);
   }
 
-  .privateChannels__35e86,
   .sidebar_c48ade {
     overflow: visible; // show pfp
+    max-height: 100vh;
   }
 
   //weird bar
