--- a/user_vars.scss
+++ b/user_vars.scss
@@ -1,3 +1,6 @@
+// ignore this file
+// this justs lists vars in comfy.theme.css
+
 :root {
   --disable-animations: 2s channel-unread infinite;
   --user-buttons-spacing: 8px;
