--- a/src/_.scss
+++ b/src/_.scss
@@ -26,4 +26,14 @@
   {
     background-color: var(--background-secondary);
   }
+
+  //Tooltips
+  .tooltip__382e7 {
+    background-color: var(--background-secondary-alt);
+  }
+
+  //Topbar + weird corner of main area
+  .title_c38106, .sidebar_c48ade {
+    background-color: var(--background-tertiary);
+  }
 }
