--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@
 .theme-dark,
 .visual-refresh .theme-darker,
 .visual-refresh.theme-darker,
+.visual-refresh .theme-dark,
 .visual-refresh.theme-dark {
   --background-primary: #23283d;
   --background-secondary: #1e2233;
