--- a/src/profile.scss
+++ b/src/profile.scss
@@ -4,6 +4,10 @@
     display: none;
   }
 
+  .inner_c0bea0 {
+    background-color: var(--background-primary);
+  }
+
   .inner_ab8609, //add status
   .outer_ab8609 //add status bubbles
   {
