--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -38,4 +38,9 @@
   .wrapper__44df5 {
     background-color: var(--background-secondary);
   }
+
+  // forum hover
+  .popout_8514, .popout__76f04 {
+    background-color: var(--background-secondary-alt);
+  }
 }
