--- a/src/friends.scss
+++ b/src/friends.scss
@@ -21,4 +21,9 @@
   .container__9293f {
     background-color: var(--background-secondary);
   }
+
+  // active now (right) section
+  .itemCard__7e549 {
+    background-color: var(--background-secondary-alt);
+  }
 }
