add message right click menu

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -94,4 +94,9 @@
     // Embeds
     background-color: var(--background-secondary);
   }
+
+  //Right click menu
+  .menu_c1e9c4 {
+    background-color: var(--background-secondary);
+  }
 }
