--- a/src/chat.scss
+++ b/src/chat.scss
@@ -99,4 +99,9 @@
   .menu_c1e9c4 {
     background-color: var(--background-secondary);
   }
+
+  //vc buttons
+  .buttonSection__1405b {
+    background-color: var(--background-primary);
+  }
 }
