--- a/src/profile.scss
+++ b/src/profile.scss
@@ -13,4 +13,9 @@
   {
     background-color: var(--background-secondary);
   }
+
+  // activity
+  .overlay_c0bea0 {
+    background-color: var(--background-secondary-alt);
+  }
 }
