--- a/src/_.scss
+++ b/src/_.scss
@@ -33,7 +33,15 @@
   }
 
   //Topbar + weird corner of main area
-  .title_c38106, .sidebar_c48ade {
+  .title_c38106,
+  .sidebar_c48ade {
     background-color: var(--background-tertiary);
+  }
+
+  // Streaming bar + vc status + spotify player
+  .panel__5dec7,
+  .wrapper_e131a9,
+  #vc-spotify-player {
+    background-color: var(--background-secondary-alt);
   }
 }
