--- a/src/chat.scss
+++ b/src/chat.scss
@@ -104,4 +104,9 @@
   .buttonSection__1405b {
     background-color: var(--background-primary);
   }
+
+  //emoji info
+  .popoutContainer__0f481 {
+    background-color: var(--background-secondary-alt);
+  }
 }
