fix channel integrations

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -109,4 +109,9 @@
   .popoutContainer__0f481 {
     background-color: var(--background-secondary-alt);
   }
+
+  //integrations
+  .card_dc2e44.card__73069 {
+    background-color: var(--background-secondary);
+  }
 }
