fix attachments and vencord update button

--- a/src/_.scss
+++ b/src/_.scss
@@ -44,4 +44,9 @@
   #vc-spotify-player {
     background-color: var(--background-secondary-alt);
   }
+
+  // Vencord update notice
+  .vc-notification-root {
+    background-color: var(--background-secondary);
+  }
 }
