--- a/app.scss
+++ b/app.scss
@@ -8,7 +8,7 @@
 @forward "src/profile.scss";
 @forward "src/server-list.scss";
 @forward "src/settings.scss";
-@forward "src/community.scss";
+@forward "src/server.scss";
 
 @import "https://metro420yt.github.io/misc/discordRefreshWarning.css";
 :root {
