--- a/src/profile.scss
+++ b/src/profile.scss
@@ -4,9 +4,18 @@
     display: none;
   }
 
+  .inner_c0bea0 {
+    background-color: var(--background-primary);
+  }
+
   .inner_ab8609, //add status
   .outer_ab8609 //add status bubbles
   {
     background-color: var(--background-secondary);
+  }
+
+  // activity
+  .overlay_c0bea0 {
+    background-color: var(--background-secondary-alt);
   }
 }
